8332066: AArch64: Math test failures since JDK-8331558

Revert "8331558: AArch64: optimize integer remainder"
This reverts commit dab92c51c70767abcda3b1a91dd7d1a9b40290c1.